LORD Fixed nested call bug